# scnr2

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: python-release.yml  rust.yml
scnr2/: Cargo.toml
scnr2-python/: Cargo.toml  README.md  pyproject.toml
scnr2-python/src/: lib.rs
scnr2/src/: internals.rs  lib.rs
scnr2/src/internals/: char_iter.rs  find_matches.rs  match_types.rs  mod.rs  position.rs  scanner_impl.rs
scnr2/src/internals/find_matches/: iterator.rs  matching.rs  traits.rs
scnr2_generate/: Cargo.toml
scnr2_generate/data/: expected_generated_code.rs
scnr2_generate/src/: character_classes.rs  dfa.rs  generate.rs  ids.rs  lib.rs  minimizer.rs  nfa.rs  parser.rs  pattern.rs  scanner_data.rs  scanner_mode.rs
scnr2_macro/: Cargo.toml
tests/: Cargo.toml  TEST_COVERAGE.md  automate_test_checks.ps1  automate_test_commissioning.ps1  extract.ps1  match_errors.rs  match_fuzz.rs  match_test.rs  mode_switch_tests.rs
tests/benches/: bench.rs
