[workspace]
members = [ "scnr2", "scnr2_generate","scnr2_macro", "tests" ]
resolver = "2"

[workspace.package]
version = "0.3.3"
edition = "2024"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
keywords = ["scanner", "lexer", "tokenizer"]
categories = ["algorithms", "parsing"]
license = "MIT/Apache-2.0"

[profile.release]
opt-level = 3
lto = true
debug = true

[profile.bench]
lto = true