[workspace]
members = [
    "scnr2",
    "scnr2_generate",
    "scnr2_macro",
    "tests",
    "scnr2-python",
]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2024"
authors = ["Jörg Singer <singer.joerg@gmx.de>"]
keywords = ["scanner", "lexer", "tokenizer"]
categories = ["algorithms", "parsing"]
license = "MIT/Apache-2.0"
readme="README.md"

[profile.release]
opt-level = 3
lto = true
debug = true

[profile.bench]
lto = true