[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "scnr2"
version = "0.3.3"
description = "Python bindings for scnr2"
requires-python = ">=3.8"
authors = [
    { name = "Jörg Singer", email = "singer.joerg@gmx.de" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "scnr2"
