[package]
name = "scnr2_generate"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
log = "0.4.25"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex-syntax = "0.8.5"
syn = "2.0.101"

[dev-dependencies]
rstest = "0.25.0"
tempfile = "3.20.0"
