[package]
name = "scnr2_generate"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
description = "Scanner/Lexer with regex patterns and multiple modes"
repository = "https://github.com/jsinger67/scnr2"

[dependencies]
log = "0.4.29"
proc-macro2 = "1.0.104"
quote = "1.0.42"
regex-syntax = "0.8.5"
rustc-hash = "2.1.1"
syn = "2.0.112"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.24.0"
