[package]
name = "scnr2_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
scnr2_generate = { version = "0.1.0", path = "../scnr2_generate" }

[lib]
bench = false
proc-macro = true