[package]
edition.workspace = true
name = "tests"
publish = false
version = "0.1.0"

[dependencies]
scnr2 = { path = "../scnr2" }
scnr2_generate = { path = "../scnr2_generate" }

[dev-dependencies]
codspeed-criterion-compat = "4.2.1"
criterion = "0.8.1"
env_logger = "0.11.8"

[package.metadata.release]
release = false

[[bench]]
harness = false
name = "bench"

[[test]]
name = "match_test"
path = "match_test.rs"

[[test]]
name = "match_fuzz"
path = "match_fuzz.rs"

[[test]]
name = "match_errors"
path = "match_errors.rs"

